# Connectico

./: main.py  pyproject.toml
templates/: index.html
